test/files/pos/trait_fields_nested_public_object.scala
trait NestedObj {
  object O { println("NO") }
}

class C extends NestedObj