test/files/neg/plugin-cyclic-dependency/testsource.scala
object Test extends Application {
  println("cyclicdependency")
}

